--- a/BenchBudEE.cmp
+++ b/BenchBudEE.cmp
@@ -1,10 +1,10 @@
-Cmp-Mod V01 Created by CvPcb (2013-07-07 BZR 4022)-stable date = 2/23/2014 3:41:27 AM
+Cmp-Mod V01 Created by CvPcb (2013-07-07 BZR 4022)-stable date = 2/23/2014 11:44:11 PM
 
 BeginCmp
-TimeStamp = /52EE0AAE/52F9FF33;
+TimeStamp = /52EE0AAE/530A9E5C;
 Reference = ARD1;
 ValeurCmp = ARDUINOPINS;
-IdModule  = ;
+IdModule  = ARDUINO;
 EndCmp
 
 BeginCmp
@@ -85,6 +85,20 @@ IdModule  = SM0805;
 EndCmp
 
 BeginCmp
+TimeStamp = /52EE0B67/530B607D;
+Reference = C12;
+ValeurCmp = C;
+IdModule  = SM0805;
+EndCmp
+
+BeginCmp
+TimeStamp = /52EE0B67/530B64EA;
+Reference = C13;
+ValeurCmp = C;
+IdModule  = SM0805;
+EndCmp
+
+BeginCmp
 TimeStamp = /52EE0B15/52F740BE;
 Reference = D1;
 ValeurCmp = LED;
@@ -108,8 +122,8 @@ EndCmp
 BeginCmp
 TimeStamp = /52EE0B67/52F9D192;
 Reference = D5;
-ValeurCmp = DIODE;
-IdModule  = ;
+ValeurCmp = Schottky Diode;
+IdModule  = SMA;
 EndCmp
 
 BeginCmp
@@ -214,21 +228,21 @@ BeginCmp
 TimeStamp = /52EE0B67/52F9D29A;
 Reference = Q2;
 ValeurCmp = MOSFET_N;
-IdModule  = ;
+IdModule  = SOT23GDS;
 EndCmp
 
 BeginCmp
 TimeStamp = /52EE0B67/52F9D0E4;
 Reference = Q3;
 ValeurCmp = MOSFET_N;
-IdModule  = ;
+IdModule  = DPAK2;
 EndCmp
 
 BeginCmp
 TimeStamp = /52EE0B67/52F5F7FE;
 Reference = Q4;
 ValeurCmp = MOSFET_N;
-IdModule  = ;
+IdModule  = DPAK2;
 EndCmp
 
 BeginCmp
@@ -277,112 +291,112 @@ BeginCmp
 TimeStamp = /52EE0AAE/5302EB0F;
 Reference = R7;
 ValeurCmp = R;
-IdModule  = ;
+IdModule  = SM0805-bridge;
 EndCmp
 
 BeginCmp
 TimeStamp = /52EE0AAE/52F9FF40;
 Reference = R8;
 ValeurCmp = R;
-IdModule  = ;
+IdModule  = SM0805-bridge;
 EndCmp
 
 BeginCmp
 TimeStamp = /52EE0AAE/52F8BEBC;
 Reference = R9;
 ValeurCmp = R;
-IdModule  = ;
+IdModule  = SM0805-bridge;
 EndCmp
 
 BeginCmp
 TimeStamp = /52EE0AAE/52F8BEB6;
 Reference = R10;
 ValeurCmp = R;
-IdModule  = ;
+IdModule  = SM0805-bridge;
 EndCmp
 
 BeginCmp
 TimeStamp = /52EE0AAE/52F8B760;
 Reference = R11;
 ValeurCmp = R;
-IdModule  = ;
+IdModule  = SM0805-bridge;
 EndCmp
 
 BeginCmp
 TimeStamp = /52EE0AAE/52F8B730;
 Reference = R12;
 ValeurCmp = R;
-IdModule  = ;
+IdModule  = SM0805-bridge;
 EndCmp
 
 BeginCmp
 TimeStamp = /52EE0AAE/52F8BF5A;
 Reference = R13;
 ValeurCmp = R;
-IdModule  = ;
+IdModule  = SM0805-bridge;
 EndCmp
 
 BeginCmp
 TimeStamp = /52EE0AAE/52F8BF54;
 Reference = R14;
 ValeurCmp = R;
-IdModule  = ;
+IdModule  = SM0805-bridge;
 EndCmp
 
 BeginCmp
 TimeStamp = /52EE0AAE/52F8BF4E;
 Reference = R15;
 ValeurCmp = R;
-IdModule  = ;
+IdModule  = SM0805-bridge;
 EndCmp
 
 BeginCmp
 TimeStamp = /52EE0AAE/52F8B0F4;
 Reference = R16;
 ValeurCmp = R;
-IdModule  = ;
+IdModule  = SM0805-bridge;
 EndCmp
 
 BeginCmp
 TimeStamp = /52EE0AAE/52F8C429;
 Reference = R17;
 ValeurCmp = R;
-IdModule  = ;
+IdModule  = SM0805-bridge;
 EndCmp
 
 BeginCmp
 TimeStamp = /52EE0AAE/52F912F6;
 Reference = R18;
 ValeurCmp = R;
-IdModule  = ;
+IdModule  = SM0805-bridge;
 EndCmp
 
 BeginCmp
 TimeStamp = /52EE0AAE/52F8BF34;
 Reference = R19;
 ValeurCmp = R;
-IdModule  = ;
+IdModule  = SM0805-bridge;
 EndCmp
 
 BeginCmp
 TimeStamp = /52EE0AAE/52F8B683;
 Reference = R20;
 ValeurCmp = R;
-IdModule  = ;
+IdModule  = SM0805-bridge;
 EndCmp
 
 BeginCmp
 TimeStamp = /52EE0AAE/52F9FE44;
 Reference = R21;
 ValeurCmp = R;
-IdModule  = ;
+IdModule  = SM0805-bridge;
 EndCmp
 
 BeginCmp
 TimeStamp = /52EE0AAE/52F8C0B1;
 Reference = R22;
 ValeurCmp = R;
-IdModule  = ;
+IdModule  = SM0805;
 EndCmp
 
 BeginCmp
@@ -452,14 +466,14 @@ BeginCmp
 TimeStamp = /52EE0B67/52F5F997;
 Reference = R32;
 ValeurCmp = R;
-IdModule  = ;
+IdModule  = SM0805;
 EndCmp
 
 BeginCmp
 TimeStamp = /52EE0B67/52F5F820;
 Reference = R33;
 ValeurCmp = R;
-IdModule  = ;
+IdModule  = SM1206;
 EndCmp
 
 BeginCmp
@@ -522,14 +536,14 @@ BeginCmp
 TimeStamp = /52EE0AAE/5309B121;
 Reference = R42;
 ValeurCmp = R;
-IdModule  = ;
+IdModule  = SM0805-bridge;
 EndCmp
 
 BeginCmp
 TimeStamp = /52EE0AAE/5309B129;
 Reference = R43;
 ValeurCmp = R;
-IdModule  = ;
+IdModule  = SM0805-bridge;
 EndCmp
 
 BeginCmp
@@ -544,6 +558,20 @@ TimeStamp = /52EE0AFF/5309609A;
 Reference = R45;
 ValeurCmp = R;
 IdModule  = SM0805;
+EndCmp
+
+BeginCmp
+TimeStamp = /52EE0AAE/530AF51E;
+Reference = R46;
+ValeurCmp = R;
+IdModule  = SM0805-bridge;
+EndCmp
+
+BeginCmp
+TimeStamp = /52EE0AAE/530AF518;
+Reference = R47;
+ValeurCmp = R;
+IdModule  = SM0805-bridge;
 EndCmp
 
 BeginCmp
@@ -584,8 +612,8 @@ EndCmp
 BeginCmp
 TimeStamp = /52EE0B67/52F9D118;
 Reference = TH5;
-ValeurCmp = THERMISTOR;
-IdModule  = ;
+ValeurCmp = PTC 0.5A;
+IdModule  = SM1812;
 EndCmp
 
 BeginCmp
@@ -624,10 +652,10 @@ IdModule  = ;
 EndCmp
 
 BeginCmp
-TimeStamp = /52EE0B67/52F5F90F;
+TimeStamp = /52EE0B67/530B60FB;
 Reference = U6;
-ValeurCmp = MCP4922-E/P;
-IdModule  = DIP14;
+ValeurCmp = MCP4801;
+IdModule  = SO8N;
 EndCmp
 
 BeginCmp
